# QT_Project

./: README.md  account.h  account_manager.cpp  account_manager.h  bank_manager.cpp  bank_manager.h
project/: CMakeLists.txt  account.h  account_manager.cpp  account_manager.h  addaccountdialog.cpp  addaccountdialog.h  data.json  deleteaccountdialog.cpp  deleteaccountdialog.h  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.ui  resources.qrc  signup.cpp  signup.h  signup.ui  signupmanager.cpp  signupmanager.h  transactiondialog.cpp  transactiondialog.h  transfer_dialog.cpp  transfer_dialog.h  transfer_dialog.ui  transferdialog.cpp  transferdialog.h  tx_dialog.cpp  tx_dialog.h  tx_dialog.ui
